--- a/Sait/indexForma.html
+++ b/Sait/indexForma.html
@@ -27,7 +27,7 @@
 		<ul>
 			<li><a href="index.html">Головна</a></li>
 			<li><a href="indexForma.html">Реєстрація</a></li>
-			<li><a href="#">Ф</a></li>
+		
 
 			
 		</ul>
@@ -84,7 +84,7 @@
 		<article align="center">
 
 <form >
-		<h1 title="Форма регистрации на сайте">РРЕЄСТРАЦІЯ</h1>
+		<h1 title="Форма регистрации на сайте">РЕЄСТРАЦІЯ</h1>
 		<div class="group">
 			<label for="">ІМ'Я КОРИСТУВАЧА:</label>
 			<input type="text">
@@ -102,7 +102,7 @@
 			<input type="email">
 		</div>
 		<div class="group">
-			<center><button>РРЕЄСТРАЦІЯ</button></center>
+			<center><button>РЕЄСТРАЦІЯ</button></center>
 		</div>
 	</form>
 						
@@ -116,7 +116,7 @@
 				<ul>
 					<li><a href="index.html">Головна</a></li>
 					<li><a href="indexForma.html">Руєстрація</a></li>
-					<li><a href="#">Ф</a></li>
+			
 					
 				</ul>
 			</div>
